@@ -1,5 +1,5 @@
 # Battlefield 1942 - An EA game
-# Pattern quality: ok notsofast
+# Pattern quality: ok veryfast
 #
 # Contributed by Myles Uyema <mylesuyema AT gmail.com>
 #
@@ -12,4 +12,4 @@
 # tested on two original EA battlefield 1942 servers
 # matches the first two packets of joining a server
 battlefield1942
-^\x01\x11\x10\x7c\xf8\x02\x10\x40\x06
+^\x01\x11\x10\|\xf8\x02\x10\x40\x06
