@@ -1,0 +1,10 @@
+# Half-Life 2 Deathmatch - popular computer game
+# Pattern quality: good veryfast
+#
+# Please post to l7-filter-developers@lists.sf.net as to whether this works
+# for you or not.  If you believe it could be improved please post your
+# suggestions to that list as well. You may subscribe to this list at
+# http://lists.sourceforge.net/lists/listinfo/l7-filter-developers
+
+halflife2-deathmatch
+^\xff\xff\xff\xff.*hl2mpDeathmatch
