@@ -13,4 +13,4 @@
 # and the second only in UDP.
 
 tesla
-\x03\x9a\x89\x22\x31\x31\x31\x2e\x30\x30\x20\x42\x65\x74\x61\x20|\xe2\x3c\x69\x1e\x1c\xe9
+\x03\x9a\x89\x22\x31\x31\x31\.\x30\x30\x20\x42\x65\x74\x61\x20|\xe2\x3c\x69\x1e\x1c\xe9
